tools/tree-sitter-kio/grammar.js
    source_file: ($) => choice(
      $.package_file, seq($.signature_file, repeat($._unit)), $.dependency_file, $.lock_file,
      prec.right(seq(
        repeat(choice($.module_decl, $.import_decl, $.incomplete_import_decl)),
        optional(seq($._body_unit, repeat($._unit))),
      )),
    ),
    _unit: ($) => choice($.module_decl, $.import_decl, $._body_unit),
    _body_unit: ($) => choice($._declaration, $._raw_unit),
    _identifier_like: ($) => choice($.uppercase_identifier, $._value_identifier_like),
    _value_identifier_like: ($) =>
      choice(
        $.keyword_varop,
        $.keyword_let, $.keyword_rec,
        "poly", "cont", "escape",
        $.identifier,
        $.keyword_declaration,
        $.keyword_dependency,
        $.keyword_source,
        $.keyword_lock,
        $.keyword_resolved,
        $.keyword_signature,
        $.keyword_with,
        $.keyword_breaking,
        $.keyword_nonbreaking,
        $.keyword_add,
        $.keyword_modify,
        $.keyword_remove,
        $.keyword_package,
        $.keyword_module,
        $.keyword_build,
        $.keyword_host,
        $.keyword_bridge,
        $.keyword_import,
        $.keyword_op,
        alias($._keyword_variadic, $.identifier),
        $.keyword_as,
        $.keyword_type,
        $.keyword_pub,
        $.keyword_pure,
        $.keyword_fn,
        $.keyword_literal,
        $.keyword_newtype,
        $.keyword_labels,
        $.keyword_equiv,
        $.keyword_constructor,
        $.keyword_projector,
      ),
    module_decl: ($) =>
      seq(
        $.keyword_module,
        field("path", $.module_path),
        $.separator_semicolon,
      ),
    keyword_module: ($) => kw("module"),
    module_path: ($) =>
      prec.right(seq(
        $._module_segment,
        repeat(seq($.module_path_sep, $._module_segment)),
      )),
    module_path_sep: ($) => "/",
    _module_segment: ($) => alias($._identifier_like, $.entity_name_module),
    keyword_pure: ($) => kw("pure"),

    function_definition: ($) =>
      choice(
        seq($.fn_decl_head, $._editor_boundary),
        prec.dynamic(1, seq($.fn_decl_head, $.expression_block)),
      ),

    expression_block: ($) => choice($._complete_expression_block, $.incomplete_expression_block),
    _complete_expression_block: ($) => seq(
      $.bracket_lbrace, repeat($.separator_semicolon),
      repeat(seq(choice($.let_statement, $.row_let_stmt, $._expression), repeat1($.separator_semicolon))),
      optional($._expression), repeat($.unowned_function), $.bracket_rbrace,
    ),
    incomplete_expression_block: ($) => seq(
      $.bracket_lbrace, repeat($.separator_semicolon),
      repeat(seq(choice($.let_statement, $.row_let_stmt, $._expression), repeat1($.separator_semicolon))),
      optional($._expression), repeat($.function_definition), $._editor_eof,
    ),
    unowned_function: ($) => seq(
      alias($.fn_decl_head, $.unowned_function_head),
      alias($._complete_expression_block, $.expression_block),
    ),
    let_statement: ($) => seq(
      $.keyword_let,
      choice($._local_let_pattern, seq($.separator_dot, $.grouped_existential_pattern)),
      alias("=", $.operator_builtin), $._expression,
    ),
    _local_let_pattern: ($) => choice(
      alias($._value_identifier_like, $.identifier), alias("_", $.slot),
      seq($.separator_dot, $.local_pattern_tuple),
    ),
    grouped_existential_pattern: ($) => seq($.bracket_lparen,
      repeat1($.existential_binder),
      choice(alias($._value_identifier_like, $.identifier), alias($._typed_local_pattern_tuple, $.local_pattern_tuple)),
      $.bracket_rparen),
    local_binding_pattern: ($) => prec.dynamic(20, choice(
      $._local_binding_name, $._typed_local_binding_pattern, $.local_pattern_tuple,
    )),
    _local_binding_name: ($) => choice(alias($._value_identifier_like, $.identifier), alias("_", $.slot)),
    _typed_local_binding_pattern: ($) => choice(
      seq($._local_binding_name, alias(":", $.operator_builtin), $._type),
      seq(alias($._value_identifier_like, $.identifier), alias(":", $.operator_builtin),
        alias($._typed_local_pattern_tuple, $.local_pattern_tuple)),
    ),
    local_pattern_tuple: ($) => seq($.bracket_lparen, sep1($.local_binding_pattern, $.separator_comma), $.bracket_rparen),
    // Native as/opening lookahead skips initial '(' tokens, then requires a
    // colon before that group's close. A later outer annotation cannot qualify
    // an initial untyped nested tuple.
    _typed_local_pattern_tuple: ($) => prec(1, seq($.bracket_lparen, choice(
      alias($._typed_local_pattern_tuple, $.local_pattern_tuple),
      $._typed_local_binding_pattern,
      seq(choice(repeat1($.separator_comma), seq($._local_binding_name, repeat1($.separator_comma))),
        repeat(seq($.local_binding_pattern, repeat1($.separator_comma))), $._typed_local_binding_pattern),
    ), repeat(seq(repeat1($.separator_comma), $.local_binding_pattern)),
    repeat($.separator_comma), $.bracket_rparen)),
    keyword_let: ($) => kw("let"),
    existential_binder: ($) => seq(
      alias("<", $.operator_run), alias($._identifier_like, $.variable_parameter),
      alias(">", $.operator_run),
    ),
    binding_pattern: ($) => choice(
      seq(choice(alias($._value_identifier_like, $.variable_parameter), $.slot),
        optional(seq(alias(":", $.operator_builtin), choice($._type, $.pattern_tuple)))),
      $.pattern_tuple,
    ),
    _expression: ($) => choice($.operator_expression, $._expression_atom),
    _expression_atom: ($) => choice(ordinaryAtoms($), $.block_call),
    block_call: ($) => prec.right(seq(
      field('head', alias($.elaborator_name, $.block_head)),
      optional(field('prefix', choice($.block_value_arguments, $._block_bare_prefix))),
      field('first', $.neutral_block),
      repeat(field('labelled', $.labelled_block)),
      optional(field('elided', $.elided_block)),
    )),
    block_value_arguments: ($) => prec(1, seq(
      $.bracket_lparen,
      repeat($.separator_comma),
      optional(seq($._expression,
        repeat(seq(repeat1($.separator_comma), $._expression)),
        repeat($.separator_comma))),
      $.bracket_rparen,
    )),
    _block_bare_prefix: ($) => choice($._block_prefix_atom, $.block_prefix_operator),
    neutral_block: ($) => choice($._complete_neutral_block, $.incomplete_neutral_block),
    _complete_neutral_block: ($) => prec(2, seq(
      $.bracket_lbrace, repeat($.separator_semicolon),
      repeat(seq(choice($.neutral_bind, $.let_statement, $.row_let_stmt, $._expression),
        repeat1($.separator_semicolon))),
      optional($._expression), repeat($.unowned_function), $.bracket_rbrace,
    )),
    incomplete_neutral_block: ($) => prec(2, seq(
      $.bracket_lbrace, repeat($.separator_semicolon),
      repeat(seq(choice($.neutral_bind, $.let_statement, $.row_let_stmt, $._expression),
        repeat1($.separator_semicolon))),
      optional($._expression), repeat($.function_definition), $._editor_eof,
    )),
    neutral_bind: ($) => seq($.keyword_let, $._local_let_pattern,
      alias('<-', $.operator_run), $._expression),
    operator_expression: ($) => choice(
      prec.right(3, seq($._expression_operator, $._expression)),
      prec.left(2, seq($._expression, $._expression_operator)),
      prec.left(1, seq($._expression, $._expression_operator, $._expression)),
    ),
    _expression_operator: ($) => choice($.operator_run, $.operator_builtin, $.operator_arrow_type),
    placeholder_expression: ($) => seq(
      alias($._placeholder_open, $.separator_dot),
      alias(token.immediate(PLACEHOLDER_STEM), $.variable_parameter),
      alias(token.immediate("."), $.separator_dot),
      $.expression_block,
    ),
    variadic_expression: ($) => prec.dynamic(60, choice(
      seq($.ambiguous_lbracket_star, optional($.variadic_elements), $.variadic_star_close),
      seq($.variadic_open, optional($.variadic_elements), $.variadic_close),
    )),
    incomplete_variadic_expression: ($) => prec.dynamic(30, prec.right(seq(
      choice($.ambiguous_lbracket_star, $.variadic_open), optional($.variadic_elements), $._editor_boundary,
    ))),
    variadic_elements: ($) => choice(repeat1($.separator_comma), sep1($.variadic_element, $.separator_comma)),
    variadic_element: ($) => $._expression,
    variadic_star_close: ($) => $._varop_star_close,
    _type: ($) => choice(
      $.type_path, $.forall_type, $.type_group, $.type_arrow, $.type_product,
      alias(".", $.separator_dot), alias("!", $.operator_builtin), $.slot,
    ),
    type_path: ($) => prec.dynamic(1, prec.right(seq(
      repeat(seq(alias($._expression_name, $.identifier), $.separator_dot)),
      alias($.uppercase_identifier, $.entity_name_type),
      optional(choice($.type_arguments, $.incomplete_type_arguments)),
    ))),
    type_arguments: ($) => seq($.bracket_lparen, sep1($._type, $.separator_comma), $.bracket_rparen),
    type_group: ($) => seq($.bracket_lparen, $._type, $.bracket_rparen),
    type_product: ($) => prec.right(2, choice(
      seq($._type, $._type_chain_operator, optional($._type)),
      seq($._type_chain_operator, optional($._type)),
    )),
    _type_chain_operator: ($) => choice(
      alias(choice("&", "|"), $.operator_builtin), alias(choice(/&&+/, /\|\|+/), $.operator_run),
    ),
    _expression_name: ($) =>
      $._identifier_like,

    expression_path: ($) =>
      prec.right(seq(
        alias($._identifier_like, $.identifier),
        repeat(seq($.separator_dot, alias($._expression_name, $.identifier))),
      )),

    expression_arguments: ($) => seq(
      $.bracket_lparen,
      optional(sep1(choice($._expression, $._type, $.incomplete_forall_type), $.separator_comma)),
      $.bracket_rparen,
    ),

    grouped_expression: ($) => seq($.bracket_lparen, sep1($._expression, $.separator_comma), $.bracket_rparen),
    unit_expression: ($) => seq($.bracket_lparen, $.bracket_rparen),

    uppercase_identifier: ($) => token(prec(1, TYPE_REFERENCE_NAME)),
    type_param_group: ($) =>
      choice(
        seq(
          $.bracket_lbracket,
          $._type_param_group_after_open,
        ),
        seq(
          $.ambiguous_lbracket_star,
          $._star_type_param_binder,
          $._type_param_group_after_first_binder,
        ),
      ),

    _star_type_param_binder: ($) => alias($._identifier_like, $.variable_parameter),

    _type_param_group_after_open: ($) =>
      seq(
        repeat($.separator_comma),
        $.type_param_binder,
        $._type_param_group_after_first_binder,
      ),

    _type_param_group_after_first_binder: ($) =>
      seq(
        repeat(seq(repeat1($.separator_comma), $.type_param_binder)),
        repeat($.separator_comma),
        $.bracket_rbracket,
      ),
    fn_lambda_expr: ($) => prec.dynamic(20, seq(
      $.separator_dot, $.fn_signature, optional($._fn_return_type), $.expression_block,
    )),

    call_expr: ($) => prec.left(seq(
      choice($.call_callee, $.elaborator_name, $.call_expr,
        $.grouped_expression, $.fn_lambda_expr, $.number_literal, $.string_literal, $.bool_literal),
      $.expression_arguments,
    )),
    call_callee: ($) => choice(
      alias($._value_identifier_like, $.entity_name_function),
      seq(alias($._identifier_like, $.identifier), $.separator_dot,
        repeat(seq(alias($._expression_name, $.identifier), $.separator_dot)),
        alias($._expression_name, $.entity_name_function)),
    ),

    ufcs_expr: ($) =>
      choice(
        prec.right(
          20,
          seq(
            $._expression_atom,
            alias($._right_ufcs_arrow, $.operator_arrow_ufcs),
            choice($.call_callee, $.elaborator_name),
            optional($._call_args_group),
          ),
        ),
        prec.left(
          20,
          seq(
            choice($.call_callee, $.elaborator_name),
            optional($._call_args_group),
            alias($._left_ufcs_arrow, $.operator_arrow_ufcs),
            $._expression_atom,
          ),
        ),
      ),

    _right_ufcs_arrow: ($) => token(prec(2, choice(".>", ".>>"))),
    _left_ufcs_arrow: ($) => token(prec(2, choice(".<", ".<<"))),
    _call_args_group: ($) => $.expression_arguments,

    row_let_stmt: ($) =>
      prec.dynamic(30,
        seq(
          $.keyword_let,
          $.separator_dot,
          $.bracket_lparen,
          $.bracket_lbrace,
          repeat($.separator_comma),
          $.row_let_entry,
          repeat(seq(
            repeat1($.separator_comma),
            $.row_let_entry,
          )),
          repeat($.separator_comma),
          $.bracket_rbrace,
          $.bracket_rparen,
          alias("=", $.operator_builtin),
          $._expression,
        ),
      ),

    row_let_entry: ($) =>
      prec.right(
        choice(
          seq(
            $.label_path,
            alias($.keyword_as, $.keyword_declaration),
            alias($.identifier, $.variable_parameter),
          ),
          $.row_let_shorthand_path,
        ),
      ),

    row_let_shorthand_path: ($) =>
      seq(
        repeat(seq($.identifier, $.separator_dot)),
        alias($.identifier, $.variable_parameter),
      ),

    label_path: ($) =>
      seq(
        repeat(seq(alias($._identifier_like, $.identifier), $.separator_dot)),
        alias($._identifier_like, $.entity_name_label),
      ),
    label_value_expr: ($) =>
      prec.dynamic(20,
        seq(
          $.bracket_lbrace,
          optional(sep1($.label_value_label, $.separator_comma)),
          $.bracket_rbrace,
        ),
      ),

    label_value_label: ($) =>
      prec.right(
        choice(
          seq(
            $.label_path,
            alias("=", $.operator_builtin),
            optional($._expression),
          ),
          $.label_path,
        ),
      ),

    keyword_pub: ($) => kw("pub"),
    keyword_fn: ($) => kw("fn"),
    _fn_decl_modifiers: ($) =>
      prec(3, choice(
        $._visibility_modifier,
        $.keyword_pure,
        seq($._visibility_modifier, $.keyword_pure),
        seq($.keyword_pure, $._visibility_modifier),
      )),
    fn_decl_head: ($) =>
      prec.dynamic(20, prec.right(
        seq(
          optional($._fn_decl_modifiers),
          $.keyword_fn,
          alias($._identifier_like, $.entity_name_function),
          $.fn_signature,
          optional($._fn_return_type),
        ),
      )),

    _fn_return_type: ($) =>
      prec.right(seq($.operator_arrow_type, $._type)),
    fn_signature: ($) =>
      prec.dynamic(30, prec.right(repeat1(choice($.type_param_group, $.value_param_group)))),

    value_param_group: ($) =>
      seq(
        $.bracket_lparen,
        optional(sep1($.value_param_binder, $.separator_comma)),
        $.bracket_rparen,
      ),

    type_param_binder: ($) =>
      seq(
        optional(
          choice(
            alias(token(/\*+/), $.operator_run),
          ),
        ),
        alias($._identifier_like, $.variable_parameter),
      ),

    value_param_binder: ($) => $.binding_pattern,

    separator_semicolon: ($) => ";",
    separator_comma: ($) => ",",
    separator_dot: ($) => ".",
    keyword_declaration: ($) => kw("elab"),
    slot: ($) => choice("___", "__", "_"),

    comment_line: ($) =>
      token(seq("//", optional(seq(/[ \t\r]/, /[^\n]*/)))),
    bracket_lparen: ($) => "(",
    bracket_rparen: ($) => ")",
    bracket_lbrace: ($) => "{",
    bracket_rbrace: ($) => "}",
    bracket_lbracket: ($) => "[",
    bracket_rbracket: ($) => token(prec(3, "]")),
    ambiguous_lbracket_star: ($) => seq(
      alias($._varop_star_open, $.star_open_prefix),
      alias(token.immediate(/\*+/), $.kind_annotation),
    ),
    operator_arrow_ufcs: ($) => token(prec(2, choice(".>", ".>>", ".<", ".<<"))),
    operator_builtin: ($) => choice("&", "|", "=", ":", "!"),
    operator_run: ($) => choice($._fixed_run, $._minus, "/"),
    identifier: ($) => token(choice(
      /[A-Za-z][A-Za-z0-9_]*/,
      /_+[A-Za-z0-9][A-Za-z0-9_]*/,
    )),
  },
});
