tools/tree-sitter-kio/test/corpus/ergonomics.txt
================================================================================
structural placeholder_stem_x
================================================================================
module m; fn run() { .x. // body
{ (x1, x2()) } }
--------------------------------------------------------------------------------

(source_file
  (module_decl
    (keyword_module)
    path: (module_path
      (entity_name_module))
    (separator_semicolon))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (placeholder_expression
        (separator_dot)
        (variable_parameter)
        (separator_dot)
        (comment_line)
        (expression_block
          (bracket_lbrace)
          (grouped_expression
            (bracket_lparen)
            (expression_path
              (identifier))
            (separator_comma)
            (call_expr
              (call_callee
                (entity_name_function))
              (expression_arguments
                (bracket_lparen)
                (bracket_rparen)))
            (bracket_rparen))
          (bracket_rbrace)))
      (bracket_rbrace))))

================================================================================
structural placeholder_stem_t
================================================================================
module m; fn run() { .t. // body
{ (t1, t2()) } }
--------------------------------------------------------------------------------

(source_file
  (module_decl
    (keyword_module)
    path: (module_path
      (entity_name_module))
    (separator_semicolon))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (placeholder_expression
        (separator_dot)
        (variable_parameter)
        (separator_dot)
        (comment_line)
        (expression_block
          (bracket_lbrace)
          (grouped_expression
            (bracket_lparen)
            (expression_path
              (identifier))
            (separator_comma)
            (call_expr
              (call_callee
                (entity_name_function))
              (expression_arguments
                (bracket_lparen)
                (bracket_rparen)))
            (bracket_rparen))
          (bracket_rbrace)))
      (bracket_rbrace))))

================================================================================
structural placeholder_stem_f
================================================================================
module m; fn run() { .f. // body
{ (f1, f2()) } }
--------------------------------------------------------------------------------

(source_file
  (module_decl
    (keyword_module)
    path: (module_path
      (entity_name_module))
    (separator_semicolon))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (placeholder_expression
        (separator_dot)
        (variable_parameter)
        (separator_dot)
        (comment_line)
        (expression_block
          (bracket_lbrace)
          (grouped_expression
            (bracket_lparen)
            (expression_path
              (identifier))
            (separator_comma)
            (call_expr
              (call_callee
                (entity_name_function))
              (expression_arguments
                (bracket_lparen)
                (bracket_rparen)))
            (bracket_rparen))
          (bracket_rbrace)))
      (bracket_rbrace))))

================================================================================
structural placeholder_stem__arg
================================================================================
module m; fn run() { ._arg. // body
{ (_arg1, _arg2()) } }
--------------------------------------------------------------------------------

(source_file
  (module_decl
    (keyword_module)
    path: (module_path
      (entity_name_module))
    (separator_semicolon))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (placeholder_expression
        (separator_dot)
        (variable_parameter)
        (separator_dot)
        (comment_line)
        (expression_block
          (bracket_lbrace)
          (grouped_expression
            (bracket_lparen)
            (expression_path
              (identifier))
            (separator_comma)
            (call_expr
              (call_callee
                (entity_name_function))
              (expression_arguments
                (bracket_lparen)
                (bracket_rparen)))
            (bracket_rparen))
          (bracket_rbrace)))
      (bracket_rbrace))))

================================================================================
structural placeholder_stem_x1_y
================================================================================
module m; fn run() { .x1_y. // body
{ (x1_y1, x1_y2()) } }
--------------------------------------------------------------------------------

(source_file
  (module_decl
    (keyword_module)
    path: (module_path
      (entity_name_module))
    (separator_semicolon))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (placeholder_expression
        (separator_dot)
        (variable_parameter)
        (separator_dot)
        (comment_line)
        (expression_block
          (bracket_lbrace)
          (grouped_expression
            (bracket_lparen)
            (expression_path
              (identifier))
            (separator_comma)
            (call_expr
              (call_callee
                (entity_name_function))
              (expression_arguments
                (bracket_lparen)
                (bracket_rparen)))
            (bracket_rparen))
          (bracket_rbrace)))
      (bracket_rbrace))))

================================================================================
structural invalid_placeholder_intro_.x1.
================================================================================
module m; fn run() { .x1. { x1 } } fn neighbor() { () }
--------------------------------------------------------------------------------

(source_file
  (module_decl
    (keyword_module)
    path: (module_path
      (entity_name_module))
    (separator_semicolon))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (ERROR
        (separator_dot)
        (entity_name_label)
        (separator_dot))
      (label_value_expr
        (bracket_lbrace)
        (label_value_label
          (label_path
            (entity_name_label)))
        (bracket_rbrace))
      (bracket_rbrace)))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (unit_expression
        (bracket_lparen)
        (bracket_rparen))
      (bracket_rbrace))))

================================================================================
structural invalid_placeholder_intro_.x_.
================================================================================
module m; fn run() { .x_. { x1 } } fn neighbor() { () }
--------------------------------------------------------------------------------

(source_file
  (module_decl
    (keyword_module)
    path: (module_path
      (entity_name_module))
    (separator_semicolon))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (ERROR
        (separator_dot)
        (entity_name_label)
        (separator_dot))
      (label_value_expr
        (bracket_lbrace)
        (label_value_label
          (label_path
            (entity_name_label)))
        (bracket_rbrace))
      (bracket_rbrace)))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (unit_expression
        (bracket_lparen)
        (bracket_rparen))
      (bracket_rbrace))))

================================================================================
structural invalid_placeholder_intro_.__x.
================================================================================
module m; fn run() { .__x. { x1 } } fn neighbor() { () }
--------------------------------------------------------------------------------

(source_file
  (module_decl
    (keyword_module)
    path: (module_path
      (entity_name_module))
    (separator_semicolon))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (ERROR
        (separator_dot)
        (entity_name_label)
        (separator_dot))
      (label_value_expr
        (bracket_lbrace)
        (label_value_label
          (label_path
            (entity_name_label)))
        (bracket_rbrace))
      (bracket_rbrace)))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (unit_expression
        (bracket_lparen)
        (bracket_rparen))
      (bracket_rbrace))))

================================================================================
structural invalid_placeholder_intro_. x.
================================================================================
module m; fn run() { . x. { x1 } } fn neighbor() { () }
--------------------------------------------------------------------------------

(source_file
  (module_decl
    (keyword_module)
    path: (module_path
      (entity_name_module))
    (separator_semicolon))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (ERROR
        (separator_dot)
        (entity_name_label)
        (separator_dot))
      (label_value_expr
        (bracket_lbrace)
        (label_value_label
          (label_path
            (entity_name_label)))
        (bracket_rbrace))
      (bracket_rbrace)))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (unit_expression
        (bracket_lparen)
        (bracket_rparen))
      (bracket_rbrace))))

================================================================================
structural invalid_placeholder_intro_.x .
================================================================================
module m; fn run() { .x . { x1 } } fn neighbor() { () }
--------------------------------------------------------------------------------

(source_file
  (module_decl
    (keyword_module)
    path: (module_path
      (entity_name_module))
    (separator_semicolon))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (ERROR
        (separator_dot)
        (entity_name_label)
        (separator_dot))
      (label_value_expr
        (bracket_lbrace)
        (label_value_label
          (label_path
            (entity_name_label)))
        (bracket_rbrace))
      (bracket_rbrace)))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (unit_expression
        (bracket_lparen)
        (bracket_rparen))
      (bracket_rbrace))))

================================================================================
structural invalid_placeholder_intro_.(x: .).
================================================================================
module m; fn run() { .(x: .). { x1 } } fn neighbor() { () }
--------------------------------------------------------------------------------

(source_file
  (module_decl
    (keyword_module)
    path: (module_path
      (entity_name_module))
    (separator_semicolon))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (fn_lambda_expr
        (separator_dot)
        (fn_signature
          (value_param_group
            (bracket_lparen)
            (value_param_binder
              (binding_pattern
                (variable_parameter)
                (operator_builtin)
                (separator_dot)))
            (bracket_rparen)))
        (ERROR)
        (expression_block
          (bracket_lbrace)
          (expression_path
            (identifier))
          (bracket_rbrace)))
      (bracket_rbrace)))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (unit_expression
        (bracket_lparen)
        (bracket_rparen))
      (bracket_rbrace))))

================================================================================
structural placeholder_missing_outer_brace_neighbor
================================================================================
module probe; fn run() { .x. { x1 } fn neighbor() { () }
--------------------------------------------------------------------------------

(source_file
  (module_decl
    (keyword_module)
    path: (module_path
      (entity_name_module))
    (separator_semicolon))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (incomplete_expression_block
        (bracket_lbrace)
        (placeholder_expression
          (separator_dot)
          (variable_parameter)
          (separator_dot)
          (expression_block
            (bracket_lbrace)
            (expression_path
              (identifier))
            (bracket_rbrace)))
        (function_definition
          (fn_decl_head
            (keyword_fn)
            (entity_name_function)
            (fn_signature
              (value_param_group
                (bracket_lparen)
                (bracket_rparen))))
          (expression_block
            (bracket_lbrace)
            (unit_expression
              (bracket_lparen)
              (bracket_rparen))
            (bracket_rbrace)))))))

================================================================================
structural placeholder_nested_ordinary_shadowing_roles
================================================================================
module m; fn run() { .x. { let x1 = value; .y. { (x1, y1, x2()) } } }
--------------------------------------------------------------------------------

(source_file
  (module_decl
    (keyword_module)
    path: (module_path
      (entity_name_module))
    (separator_semicolon))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (placeholder_expression
        (separator_dot)
        (variable_parameter)
        (separator_dot)
        (expression_block
          (bracket_lbrace)
          (let_statement
            (keyword_let)
            (identifier)
            (operator_builtin)
            (expression_path
              (identifier)))
          (separator_semicolon)
          (placeholder_expression
            (separator_dot)
            (variable_parameter)
            (separator_dot)
            (expression_block
              (bracket_lbrace)
              (grouped_expression
                (bracket_lparen)
                (expression_path
                  (identifier))
                (separator_comma)
                (expression_path
                  (identifier))
                (separator_comma)
                (call_expr
                  (call_callee
                    (entity_name_function))
                  (expression_arguments
                    (bracket_lparen)
                    (bracket_rparen)))
                (bracket_rparen))
              (bracket_rbrace)))
          (bracket_rbrace)))
      (bracket_rbrace))))

================================================================================
structural let_explicit_rich_patterns
================================================================================
module m; fn run() { let .(x: A) = a; let .(left, (right, _: A)) = pair; let .(whole: (part: A, rest: A)) = pair; whole }
--------------------------------------------------------------------------------

(source_file
  (module_decl
    (keyword_module)
    path: (module_path
      (entity_name_module))
    (separator_semicolon))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (let_statement
        (keyword_let)
        (separator_dot)
        (local_pattern_tuple
          (bracket_lparen)
          (local_binding_pattern
            (identifier)
            (operator_builtin)
            (type_path
              (entity_name_type)))
          (bracket_rparen))
        (operator_builtin)
        (expression_path
          (identifier)))
      (separator_semicolon)
      (let_statement
        (keyword_let)
        (separator_dot)
        (local_pattern_tuple
          (bracket_lparen)
          (local_binding_pattern
            (identifier))
          (separator_comma)
          (local_binding_pattern
            (local_pattern_tuple
              (bracket_lparen)
              (local_binding_pattern
                (identifier))
              (separator_comma)
              (local_binding_pattern
                (slot)
                (operator_builtin)
                (type_path
                  (entity_name_type)))
              (bracket_rparen)))
          (bracket_rparen))
        (operator_builtin)
        (expression_path
          (identifier)))
      (separator_semicolon)
      (let_statement
        (keyword_let)
        (separator_dot)
        (local_pattern_tuple
          (bracket_lparen)
          (local_binding_pattern
            (identifier)
            (operator_builtin)
            (local_pattern_tuple
              (bracket_lparen)
              (identifier)
              (operator_builtin)
              (type_path
                (entity_name_type))
              (separator_comma)
              (local_binding_pattern
                (identifier)
                (operator_builtin)
                (type_path
                  (entity_name_type)))
              (bracket_rparen)))
          (bracket_rparen))
        (operator_builtin)
        (expression_path
          (identifier)))
      (separator_semicolon)
      (expression_path
        (identifier))
      (bracket_rbrace))))

================================================================================
structural let_explicit_row_and_existential
================================================================================
module m; fn run() { let .({field as x, other}) = row; let .(<A> packed) = value; packed }
--------------------------------------------------------------------------------

(source_file
  (module_decl
    (keyword_module)
    path: (module_path
      (entity_name_module))
    (separator_semicolon))
  (function_definition
    (fn_decl_head
      (keyword_fn)
      (entity_name_function)
      (fn_signature
        (value_param_group
          (bracket_lparen)
          (bracket_rparen))))
    (expression_block
      (bracket_lbrace)
      (row_let_stmt
        (keyword_let)
        (separator_dot)
        (bracket_lparen)
        (bracket_lbrace)
        (row_let_entry
          (label_path
            (entity_name_label))
          (keyword_declaration)
          (variable_parameter))
        (separator_comma)
        (row_let_entry
          (row_let_shorthand_path
            (variable_parameter)))
        (bracket_rbrace)
        (bracket_rparen)
        (operator_builtin)
        (expression_path
          (identifier)))
      (separator_semicolon)
      (let_statement
        (keyword_let)
        (separator_dot)
        (grouped_existential_pattern
          (bracket_lparen)
          (existential_binder
            (operator_run)
            (variable_parameter)
            (operator_run))
          (identifier)
          (bracket_rparen))
        (operator_builtin)
        (expression_path
          (identifier)))
      (separator_semicolon)
      (expression_path
        (identifier))
      (bracket_rbrace))))

================================================================================
structural let_monadic_rich_patterns_and_discard
================================================================================
module m; fn run() { do! (bind) { let _ <- action; let .(x: A) <- action; let .(whole: (left: A, right: A)) = pair; whole } }
--------------------------------------------------------------------------------
